# mpi-sp

./: README.md  SUGGESTIONS.md  benchmark.c  counter_fs.c  handoff.md  kaching.md  launch_c1_parallel.sh  launch_campaigns.sh  plan.md  plot_campaign.py  project_execution_plan.md  runc_plan.md  specs.txt  stupid.md
afl_fuse_fuzz/: Makefile  afl_harness  afl_harness.c  afl_harness_plain  fuse_single_file  fuse_single_file.c  run_fuzzing.sh
afl_fuse_fuzz/findings/default/: cmdline  fuzz_bitmap  fuzzer_setup  fuzzer_stats  plot_data
afl_fuse_fuzz/findings/default/crashes/: README.txt  id:000000,sig:06,src:000011,time:375458,execs:3274704,op:havoc,rep:1
afl_fuse_fuzz/findings/default/queue/: id:000003,src:000002,time:1682,execs:10300,op:havoc,rep:6,+cov  id:000004,src:000003,time:2135,execs:13049,op:havoc,rep:8,+cov  id:000005,src:000004,time:3330,execs:20311,op:havoc,rep:10,+cov  id:000006,src:000005,time:4206,execs:25647,op:havoc,rep:4,+cov  id:000007,src:000006,time:5699,execs:35132,op:havoc,rep:2,+cov  id:000008,src:000007,time:6454,execs:39730,op:havoc,rep:2,+cov  id:000009,src:000008,time:8978,execs:55159,op:havoc,rep:1,+cov  id:000010,src:000006+000005,time:24481,execs:158011,op:splice,rep:2,+cov  id:000011,src:000010,time:110756,execs:814378,op:havoc,rep:1,+cov
afl_fuse_fuzz/findings/default/queue/.state/variable_behavior/: id:000000,time:0,execs:0,orig:seed1
control_plane/: Makefile  control_plane.c  control_plane.h  cp_test  cp_test.c  cp_test_asan  delta.c  delta.h
counter_bench/: benchmark  counter_fs
demo/: crun_harness.c  demo.md  foobar_target.c  libarchive_harness.c
docs/: WEEK4_WALKTHROUGH.md  WEEK5.md  benchmark_baseline.md  control_plane.md  fuzzing_campaign.md  meeting.md  mutation_model.md  pre_week4_sidequest.md  vfs_design_v1.md  write_support_and_feedback.md
fuse_benchmark/: Makefile  bench.md  bench_heavy.c  bench_realworld.sh  bench_sqlite.sh  fuse_bench_fs.c  run_bench.sh
fuse_vfs/: Makefile  WEEK3.md  fuse_vfs  fuse_vfs.c  test_mount.sh
fuzz_dashboard/: index.html  server.py
mutator/: Cargo.toml  README.md  build.rs
mutator/corpus_crun/: .delta_11_ops1.json_1.metadata  .delta_12_ops1.json_1.metadata  .delta_13_ops1.json_1.metadata  .delta_14_ops1.json_1.metadata  .delta_15_ops1.json_1.metadata  .delta_16_ops1.json_1.metadata  .delta_17_ops1.json_1.metadata  .delta_18_ops1.json_1.metadata  .delta_19_ops1.json_1.metadata  .delta_20_ops1.json_1.metadata  .delta_7_ops1.json_1.metadata  delta_0_ops1.json  delta_100_ops13.json  delta_100_ops48.json  delta_101_ops19.json  delta_101_ops23.json  delta_102_ops17.json  delta_102_ops8.json  delta_103_ops20.json  delta_103_ops45.json  delta_104_ops18.json  delta_104_ops2.json  delta_105_ops12.json  delta_105_ops19.json  delta_106_ops15.json  delta_107_ops2.json  delta_107_ops20.json  delta_108_ops3.json  delta_108_ops7.json  delta_109_ops20.json  delta_109_ops6.json  delta_10_ops1.json  delta_110_ops12.json  delta_110_ops20.json  delta_111_ops7.json  delta_111_ops9.json  delta_112_ops20.json  delta_112_ops7.json  delta_113_ops20.json  delta_113_ops5.json  (+215 more)
mutator/corpus_foobar/: .delta_6_ops2.json_1.metadata  delta_10_ops2.json  delta_11_ops10.json  delta_11_ops20.json  delta_11_ops8.json  delta_12_ops13.json  delta_12_ops19.json  delta_12_ops2.json  delta_12_ops20.json  delta_13_ops1.json  delta_13_ops2.json  delta_13_ops20.json  delta_13_ops5.json  delta_13_ops6.json  delta_14_ops1.json  delta_14_ops20.json  delta_14_ops3.json  delta_14_ops5.json  delta_15_ops1.json  delta_15_ops12.json  delta_15_ops20.json  delta_15_ops5.json  delta_16_ops1.json  delta_16_ops3.json  delta_16_ops4.json  delta_17_ops1.json  delta_17_ops4.json  delta_17_ops6.json  delta_18_ops1.json  delta_18_ops4.json  delta_19_ops1.json  delta_19_ops5.json  delta_19_ops6.json  delta_20_ops1.json  delta_20_ops4.json  delta_21_ops1.json  delta_22_ops1.json  delta_3_ops1.json  delta_4_ops2.json  delta_9_ops1.json
mutator/solutions_foobar/: .delta_0_ops1.json_1.metadata  .delta_0_ops5.json_1.metadata  delta_0_ops1.json  delta_0_ops5.json
mutator/src/: delta.rs  ffi.rs  guidance.rs  lib.rs  mutators.rs
mutator/src/libafl_glue/: mod.rs
others/: counter_fs_offset0  counter_fs_offset0.c  counter_fs_open_snapshot  counter_fs_open_snapshot.c
scripts/: build_libarchive_sancov.sh
trash/: benchmark_comparison.sh  conv.md  handoff.md  launch_c1_parallel.sh  stop_campaigns.sh  week4_comprehensive_explanation.md  week5_suggestions.md
trash/corpus_foobar/: .delta_10_ops2.json_1.metadata  .delta_5_ops1.json_1.metadata  .delta_8_ops3.json_1.metadata  .delta_9_ops1.json_1.metadata  delta_0_ops1.json  delta_11_ops9.json  delta_12_ops20.json  delta_13_ops18.json  delta_2_ops1.json  delta_5_ops1.json  delta_6_ops2.json  delta_7_ops1.json  delta_8_ops3.json
vfs/: HACKING.md  Makefile  vfs.c  vfs.h  vfs_test  vfs_test.c
web_campaign/: index.html  plot_final.py  server.py
