[package]
name = "fs-mutator"
version = "0.1.0"
edition = "2021"

[lib]
name = "fs_mutator"

[[bin]]
name = "fuzz"
path = "src/bin/fuzz.rs"

[[bin]]
name = "vfs_bench"
path = "src/bin/vfs_bench.rs"

# Phase B: LibAFL harness — foobar demo + libarchive campaign.
# Usage:
#   cargo run --bin fuzz_libafl -- foobar        (default demo)
#   cargo run --bin fuzz_libafl -- libarchive    (needs libarchive-dev)
[[bin]]
name = "fuzz_libafl"
path = "src/bin/fuzz_libafl.rs"

[dependencies]
libafl         = "0.15"
libafl_bolts   = "0.15"
# libafl_targets provides SanCov callbacks (__sanitizer_cov_trace_pc_guard*)
# and EDGES_MAP.  foobar_target.c is compiled with -fsanitize-coverage=trace-pc-guard;
# these symbols resolve here at link time.
libafl_targets = { version = "0.15", features = ["sancov_pcguard_edges", "cmplog", "sancov_cmplog"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
libc           = "0.2"

[build-dependencies]
cc = "1"

[profile.release]
opt-level     = 3
debug         = false
