[package]
name = "fs-mutator"
version = "0.1.0"
edition = "2021"

[lib]
name = "fs_mutator"

[[bin]]
name = "fuzz"
path = "src/bin/fuzz.rs"

[[bin]]
name = "vfs_bench"
path = "src/bin/vfs_bench.rs"

# LibAFL harness — foobar only, no CmpLog (speed baseline).
[[bin]]
name = "fuzz_foobar"
path = "src/bin/fuzz_foobar.rs"

# LibAFL harness — foobar with CmpLog + I2S stage.
[[bin]]
name = "fuzz_foobar_cmplog"
path = "src/bin/fuzz_foobar_cmplog.rs"

# LibAFL harness — dedicated runc/crun OCI runtime campaign.
[[bin]]
name = "fuzz_runc"
path = "src/bin/fuzz_runc.rs"

# LibAFL harness — foobar + libarchive + runc campaigns.
# Usage:
#   cargo run --bin fuzz_libafl -- foobar        (default demo)
#   cargo run --bin fuzz_libafl -- libarchive    (needs libarchive-dev)
#   cargo run --bin fuzz_libafl -- runc          (needs runc)
[[bin]]
name = "fuzz_libafl"
path = "src/bin/fuzz_libafl.rs"

# Phase C: in-process crun with real SanCov coverage.
# libcrun.a must be built first — see build.rs for the one-time command.
# Usage: cargo run --release --bin fuzz_crun
[[bin]]
name = "fuzz_crun"
path = "src/bin/fuzz_crun.rs"

# Campaign 2: FUSE rootfs mutation + AFL ForkserverExecutor (afl-clang-lto crun).
# Run from /tmp/campaign2/ as root.
[[bin]]
name = "fuzz_rootfs_afl"
path = "src/bin/fuzz_rootfs_afl.rs"

# Campaign 3: Nautilus config grammar + FUSE rootfs mutation simultaneously.
# Run from /tmp/campaign3/ as root.
[[bin]]
name = "fuzz_combined_afl"
path = "src/bin/fuzz_combined_afl.rs"

[dependencies]
# nautilus_py is only in the git build of libafl, not the crates.io release.
# Pin to the same commit as Campaign 1 (== 0.15.4 tag) to keep API stable.
libafl         = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "277d15d751184301d4e7b6a106bb3d6930f5b431", features = [
    "std",
    "derive",
    "nautilus",
    "nautilus_py",
] }
libafl_bolts   = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "277d15d751184301d4e7b6a106bb3d6930f5b431" }
# libafl_targets provides SanCov callbacks (__sanitizer_cov_trace_pc_guard*)
# and EDGES_MAP.  foobar_target.c is compiled with -fsanitize-coverage=trace-pc-guard;
# these symbols resolve here at link time.
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "277d15d751184301d4e7b6a106bb3d6930f5b431", features = ["sancov_pcguard_edges", "cmplog", "sancov_cmplog"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
libc           = "0.2"
nix            = { version = "0.30", features = ["signal"] }
pyo3           = { version = "0.24" }

[build-dependencies]
cc = "1"

[profile.release]
opt-level     = 3
debug         = false
